# glance

./: .env.example  .gitignore  COMPETITIVE_ANALYSIS.md  ENHANCEMENT_PLAN.md  PRD.md  README.md  install-basic.sh  install-full.sh  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: gr-review.yml
.sisyphus/plans/: glance-improvement-plan.md
prompts/: arbitrator.md  architect.md  bug_hunter.md  white_hat.md
src/glance/: __main__.py  cli.py  config.py  orchestrator.py  tui.py
src/glance/agents/: arbitrator.py  architect.py  base.py  bug_hunter.py  prompt_loader.py  white_hat.py
src/glance/auto_fix/: __init__.py
src/glance/conflict/: __init__.py  analyzer.py  detector.py  reporter.py  resolver.py
src/glance/diff/: __init__.py  smart_processor.py
src/glance/integrations/: __init__.py  ci_status.py  cost_tracker.py  diff_context.py  github_client.py  memory.py  pr_response.py  review_history.py  signature_mapper.py  stats.py  team_rules.py  test_coverage.py
src/glance/knowledge/: __init__.py  base.py
src/glance/llm/: client.py
src/glance/prompts/: loader.py
src/glance/routing/: __init__.py  adaptive.py
src/glance/scanners/: linter_check.py  secret_scanner.py
tests/: test_agents.py  test_auto_fix.py  test_config.py  test_conflict.py
